[tool.poetry]
name = "ecole42-override"
version = "0.1.0"
description = ""
authors = ["Aleksandr Sokolov <bigpewm@gmail.com>"]
readme = "README.md"
packages = [{include = "ecole42_override"}]

[tool.poetry.dependencies]
python = "^3.9"
paramiko = "^2.11.0"
colorama = "^0.4.5"
jupyter = "^1.0.0"
p2j = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

